Fix a tag so that it covers the entire card

--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -13,6 +13,12 @@
     flex-direction: column;
 }
 
+.card-container a {
+    text-decoration: none;
+    color: black;
+
+}
+
 /* Styles for Card Banner */
 .card-image-background {
     height: 300px;
